<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_welcome"
    tools:context=".ui.SplashActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:text="@string/welcome"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/dimen_35sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_45dp"
            android:layout_marginRight="@dimen/dimen_45dp"
            android:background="@color/colorAccent"
            android:padding="@dimen/dimen_17dp"
            android:text="@string/tv_register"
            android:textColor="@color/colorWhiteTrans"
            android:textSize="@dimen/txt_15sp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_register"
            android:layout_marginBottom="@dimen/dimen_67dp"
            android:layout_marginLeft="@dimen/dimen_45dp"
            android:layout_marginRight="@dimen/dimen_45dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:background="@color/colorAccent"
            android:padding="@dimen/dimen_17dp"
            android:text="@string/tv_login"
            android:textColor="@color/colorWhiteTrans"
            android:textSize="@dimen/txt_15sp" />
    </RelativeLayout>

</RelativeLayout>